--- a/hoja4.html
+++ b/hoja4.html
@@ -90,7 +90,7 @@
                             </table>
                             <table border="0" width="80%" align="center">
                                     <tr>
-                                        <td><img src="imagenes/Llaveros.jpg" width="400" height="400"></td>
+                                        <td><img src="imagenes/llaveros.jpg" width="400" height="400"></td>
                                     <td align="center" width="50%"><font color="000000" size="5" face="Times New Roman">
                                             <b>Llaveros nike jordan diferentes colores</b>
                                             <br>
