--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
                 <h1 align="center"<font color="FFFFFF" size="8" face="Times New Roman">KICKS & CO.</font></h1>
                   <table border="0" align="center" width="80%">
                     <tr>
-                     <td><img src="imagenes/logotipo.png" width="100%" height="100%"></td>
-                     <td><img src="imagenes/logotipo.png" width="100%" height="100%"></td>
-                     <td><img src="imagenes/logotipo.png" width="100%" height="100%"></td>
-                     <td><img src="imagenes/logotipo.png" width="100%" height="100%"></td>
-                     <td><img src="imagenes/logotipo.png" width="100%" height="100%"></td>
-                     <td><img src="imagenes/logotipo.png" width="100%" height="100%"></td>
+                     <td><img src="imagenes/logotipoo.png" width="100%" height="100%"></td>
+                     <td><img src="imagenes/logotipoo.png" width="100%" height="100%"></td>
+                     <td><img src="imagenes/logotipoo.png" width="100%" height="100%"></td>
+                     <td><img src="imagenes/logotipoo.png" width="100%" height="100%"></td>
+                     <td><img src="imagenes/logotipoo.png" width="100%" height="100%"></td>
+                     <td><img src="imagenes/logotipoo.png" width="100%" height="100%"></td>
                </tr>
              </table>
              <center>
