--- a/biografia.html
+++ b/biografia.html
@@ -49,7 +49,7 @@
         
          <main>
              <div class="foto">
-                 <img src="img/logotipo.png" alt="100">
+                 <img src="img/patito.png" alt="100">
              </div>
              <div class="texto">
                  <h2>KICKS & CO.</h2>
