--- a/pedidos1.html
+++ b/pedidos1.html
@@ -1,7 +1,7 @@
 <html>
     <head><title>KICKS & CO.</title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-<body bgcolor="FFFFFF"></body> 
+<body bgcolor="FFFFFF"> 
 <img src="imagenes/nikee.jpg" width="100%" height="30%">
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <a class="navbar-brand" href="index.html">INICIO</a>
